2002-07-02  Eric Blake  <ebb9@email.byu.edu>

	* src/set.h (Resize): Followup to patch 310: Fix a thinko that was
	causing a coredump on jacks 4.10-jvms-12.

2002-07-02  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.cpp:
	* src/ast.h (original_constructor_invocation),
	(local_init_statments): Delete unused fields.
	* src/decl.cpp (ProcessConstructorDeclaration),
	(AddDefaultConstructor): Mark the this$0 parameter synthetic.
	* src/definite.cpp: Delete dead comments.
	(DefiniteThisCall, DefiniteSuperCall): Add methods for definite
	analysis in explicit constructor calls - bug 2999.
	(DefiniteConstructorBody): Use new methods.
	* src/semantic.h: Add new method signatures.
	(DefiniteClassDeclaration): Delete unused method.

2002-07-02  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitCheckForNull): Revert part of patch 296,
	as well as detect one more case of guaranteed non-null reference.

2002-07-01  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitFieldAccess): Eliminate code duplication,
	by deferring to LoadVariable.
	(LoadVariable): Fix handling of constant variables - bug
	2991. Also, fix shadow variable handling.
	* src/error.cpp (ENCLOSING_INSTANCE_ACCESS_ACROSS_STATIC_REGION):
	Improve error message wording.
	* src/expr.cpp (FindLocalVariable, FindEnclosingInstance),
	(CreateAccessToType): Improve variable resolution to detect
	anonymous classes in static regions.
	(UpdateLocalConstructors, GetAnonymousType),
	(ProcessClassInstanceCreationExpression): Improve shadow variable
	handling - bug 2986.

2002-07-01  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessExecutableBodies):
	* src/decl.cpp (CompleteSymbolTable, InitializeVariable),
	(ProcessInitializer, ProcessStaticInitializers),
	(ProcessInstanceInitializers):
	* src/definite.cpp: Refactor definite assignment of fields to use
	O(n) performance instead of O(n^2) performance, as well as saving
	assignment status on a stack - bugs 118, 500.
	* src/error.cpp: